--- a/index.html
+++ b/index.html
@@ -263,7 +263,160 @@
             background: #161b22;
             box-shadow: 0px 4px 10px rgba(255, 255, 255, 0.1);
         }
-        
+        /* General Styles (Applies to all screen sizes) */
+body {
+    font-family: 'Poppins', sans-serif;
+    margin: 0;
+    padding: 0;
+    background: #f4f4f4;
+    color: #333;
+    text-align: center;
+}
+
+/* Ensure elements scale properly */
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+/* Responsive Navigation */
+nav ul {
+    display: flex;
+    gap: 20px;
+    list-style: none;
+    padding: 0;
+    transition: all 0.3s ease-in-out;
+}
+
+/* Hamburger Menu */
+.menu-toggle {
+    display: none;
+    font-size: 24px;
+    cursor: pointer;
+}
+
+/* Mobile View */
+@media screen and (max-width: 768px) {
+    header {
+        flex-direction: column;
+        text-align: center;
+        padding: 10px;
+    }
+
+    .menu-toggle {
+        display: block;
+    }
+
+    nav ul {
+        display: none;
+        flex-direction: column;
+        gap: 10px;
+        background: #333;
+        color: #fff;
+        padding: 10px;
+        position: absolute;
+        width: 100%;
+        left: 0;
+        top: 60px;
+    }
+
+    nav ul.active {
+        display: flex;
+    }
+
+    .hero {
+        flex-direction: column;
+        text-align: center;
+        padding: 30px;
+    }
+
+    .hero img {
+        width: 150px;
+        margin-bottom: 15px;
+        transition: all 0.3s ease-in-out;
+    }
+
+    .hero-content {
+        max-width: 100%;
+    }
+
+    .content-box {
+        max-width: 95%;
+        padding: 20px;
+    }
+
+    .team-container {
+        flex-direction: column;
+    }
+
+    .team-member {
+        max-width: 400px;
+        margin: 10px auto;
+        text-align: center;
+    }
+
+    .contact-info {
+        gap: 10px;
+    }
+}
+
+/* Tablet View */
+@media screen and (min-width: 601px) and (max-width: 1024px) {
+    .hero {
+        flex-direction: column;
+        text-align: center;
+        padding: 40px;
+    }
+
+    .hero img {
+        width: 180px;
+        margin-bottom: 20px;
+    }
+
+    .content-box {
+        max-width: 90%;
+        padding: 30px;
+    }
+
+    .team-container {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .team-member {
+        max-width: 300px;
+    }
+}
+
+/* Desktop View */
+@media screen and (min-width: 1025px) {
+    .hero {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 50px 20px;
+        text-align: left;
+    }
+
+    .hero img {
+        width: 200px;
+        margin-right: 20px;
+    }
+
+    .content-box {
+        max-width: 800px;
+    }
+
+    .team-container {
+        flex-wrap: wrap;
+        gap: 30px;
+    }
+
+    .team-member {
+        width: 250px;
+    }
+}
+
     </style>
 </head>
 <body>
