--- a/index.html
+++ b/index.html
@@ -250,16 +250,22 @@
     </header>
 
     <section class="hero" id="home">
-        <img src="my-image.jpg" alt="Arafat Ali Mondal">
-        <div class="hero-content">
-            <h2>Arafat Ali Mondal</h2>
-            <h2>Master's in AI</h2>
-            <a href="https://www.makautexam.net/" target="_blank">
-                Maulana Abul Kalam Azad University of Technology, West Bengal, India
-            </a>
-            <p>I am Arafat Ali Mondal. I completed my Master’s in Artificial Intelligence in 2024 and have one year of experience in AI and sensor technology as a Research and Development Contributor at the CRTL Lab, NCSM, since March 2024. My work focuses on system design and AI/ML-driven applications, leveraging innovative technologies to develop efficient and intelligent solutions.</p>
-        </div>
-    </section>
+    <img src="my-image.jpg" alt="Arafat Ali Mondal">
+    <div class="hero-content">
+        <h2>Arafat Ali Mondal</h2>
+        <h3>Master's in Artificial Intelligence</h3>
+        <a href="https://www.makautexam.net/" target="_blank" class="university-link">
+            Maulana Abul Kalam Azad University of Technology, West Bengal, India
+        </a>
+        <p>
+            I am Arafat Ali Mondal. I completed my Master’s in Artificial Intelligence in 2024 
+            and have one year of experience in AI and sensor technology as a Research and Development Contributor 
+            at the CRTL Lab, NCSM, since March 2024. My work focuses on system design and AI/ML-driven applications, 
+            leveraging innovative technologies to develop efficient and intelligent solutions.
+        </p>
+    </div>
+</section>
+
 
     <section id="research-interests" class="content-box">
         <h2><i class="fas fa-microscope" style="color: #28a745;"></i> Research Interests</h2>
