--- a/index.html
+++ b/index.html
@@ -231,18 +231,50 @@
             <span></span>
         </button>
         <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#research-interests">Research Interests</a></li>
-                <li><a href="#education">Education</a></li>
-                <li><a href="#work-experience">Work Experience</a></li>
-                <li><a href="#publications">Publications</a></li>
-                <li><a href="#ourteam">Our Team</a></li>
-                <li><a href="#On Going Projects">My Works</a></li>
-                <li><a href="#My research works">Ongoing Projects</a></li>
-                <li><a href="#ml">Learning</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
+        html {
+    scroll-behavior: smooth;
+}
+
+/* Style for the navigation bar */
+nav {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background: #333;
+    padding: 10px 0;
+    text-align: center;
+    z-index: 1000;
+}
+
+nav ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+nav ul li {
+    display: inline;
+    margin: 0 15px;
+}
+
+nav ul li a {
+    text-decoration: none;
+    color: white;
+    font-size: 18px;
+    padding: 10px;
+}
+
+nav ul li a:hover {
+    background: #0073e6;
+    border-radius: 5px;
+}
+
+/* Add some spacing so content doesn't hide under navbar */
+section {
+    padding: 100px 20px;
+    min-height: 100vh;
+}
+
         </nav>
         <button class="dark-mode-button" onclick="toggleDarkMode()">
             <img src="11819704.png" alt="Dark Mode">
