--- a/index.html
+++ b/index.html
@@ -264,7 +264,10 @@
             box-shadow: 0px 4px 10px rgba(255, 255, 255, 0.1);
         }
         
-  
+      </style>
+</head>
+<body>
+            <header>
                 <div class="logo">AI Lab</div>
                 <button class="menu-toggle" onclick="toggleMenu()"></button> <!-- Menu button -->
                 <nav>
