--- a/index.html
+++ b/index.html
@@ -263,21 +263,43 @@
             background: #161b22;
             box-shadow: 0px 4px 10px rgba(255, 255, 255, 0.1);
         }
-                <div class="logo">AI Lab</div>
-                <button class="menu-toggle" onclick="toggleMenu()"></button> <!-- Menu button -->
-                <nav>
-                    <ul>
-                        <li><a href="#home">Home</a></li>
-                        <li><a href="#research-interests">Research Interests</a></li>
-                        <li><a href="#education">Education & Work Experience</a></li>
-                        <li><a href="#publications">Publications</a></li>
-                        <li><a href="#ourteam">Our Team</a></li>
-                        <li><a href="#On Going Projects">My works</a></li>
-                        <li><a href="#ml">Learning </a></li>
-                        <li><a href="#contact">Contact</a></li>
-                    </ul>
-                </nav>
-            </header>
+        
+    </style>
+</head>
+<body>
+    <header>
+    </style>
+    <script>
+        function toggleMenu() {
+            document.querySelector("nav ul").classList.toggle("show");
+        }
+    </script>
+</head>
+<body>
+    <header>
+        <div class="logo">AI Lab</div>
+        <button class="menu-toggle" onclick="toggleMenu()">☰</button>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#research-interests">Research Interests</a></li>
+                <li><a href="#education">Education & Work Experience</a></li>
+                <li><a href="#publications">Publications</a></li>
+                <li><a href="#ourteam">Our Team</a></li>
+                <li><a href="#projects">My Works</a></li>
+                <li><a href="#ml">Learning</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+</body>
+</html>
+
+
+
+
+            
+            </ul>
         </nav>
         <button class="dark-mode-button" onclick="toggleDarkMode()">
             <img src="11819704.png" alt="">
