--- a/index.html
+++ b/index.html
@@ -1,3 +1,41 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AI in Medicine - Daniel Ruckert</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="container">
+        <nav class="sidebar">
+            <h2>AI in Medicine</h2>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">People</a></li>
+                <li><a href="#">News</a></li>
+                <li><a href="#">Publications</a></li>
+                <li><a href="#">Teaching</a></li>
+                <li><a href="#">Vacancies</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+
+        <div class="main-content">
+            <header>
+                <h1>Daniel Ruckert</h1>
+            </header>
+            <section>
+                <p>Welcome to the AI in Medicine Lab, where we focus on imaging, AI-driven diagnosis, and advanced medical technologies.</p>
+                <p>Our research spans across deep learning, biomarker identification, and medical imaging applications for various diseases.</p>
+            </section>
+        </div>
+    </div>
+</body>
+</html>
+
+
+
 <!DOCTYPE html> 
 <html lang="en">
 <head>
