--- a/index.html
+++ b/index.html
@@ -3,44 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI in Medicine - Daniel Ruckert</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <div class="container">
-        <nav class="sidebar">
-            <h2>AI in Medicine</h2>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">People</a></li>
-                <li><a href="#">News</a></li>
-                <li><a href="#">Publications</a></li>
-                <li><a href="#">Teaching</a></li>
-                <li><a href="#">Vacancies</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
-
-        <div class="main-content">
-            <header>
-                <h1>Daniel Ruckert</h1>
-            </header>
-            <section>
-                <p>Welcome to the AI in Medicine Lab, where we focus on imaging, AI-driven diagnosis, and advanced medical technologies.</p>
-                <p>Our research spans across deep learning, biomarker identification, and medical imaging applications for various diseases.</p>
-            </section>
-        </div>
-    </div>
-</body>
-</html>
-
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ML in Medicine Arafat </title>
    <link rel="stylesheet" href="styles.css">
-
+    <head>
+<body>
+        <div class="logo">AI Lab</div>
+        <button class="menu-toggle" onclick="toggleMenu()">☰</button>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#research-interests">Research Interests</a></li>
+                <li><a href="#education">Education & Work Experience</a></li>
+                <li><a href="#publications">Publications</a></li>
+                <li><a href="#ourteam">Our Team</a></li>
+                <li><a href="#projects">My Works</a></li>
+                <li><a href="#ml">Learning</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+</body>
+        
     <style>
         body {
             font-family: 'Poppins', sans-serif;
