--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                 </ul>
             </nav>
             <button class="dark-mode-button" onclick="toggleDarkMode()">
-                <img src="11819704.png" alt="">
+                <img src="" alt="">
             </button>
         </header>
 
