--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@ and related topics. Your use of this website is at your own risk.</p>
             <img src="https://cdn-icons-png.flaticon.com/512/2921/2921822.png" alt="Apple Sorting" style="width: 60px; margin-bottom: 10px;">
             <h3 style="color: #2c3e50;">ML-Based Apple Sorting</h3>
             <p style="color: #555;">🍏 AI-powered quality grading system for apples using deep learning.</p>
-            <a href="apple-sorting.html" target="_blank" style="background: #ff5722; color: white; padding: 8px 16px; border-radius: 20px; font-size: 14px; text-decoration: none; font-weight: bold; display: inline-block;">
+            <a href="Application.html" target="_blank" style="background: #ff5722; color: white; padding: 8px 16px; border-radius: 20px; font-size: 14px; text-decoration: none; font-weight: bold; display: inline-block;">
                 Learn More →
             </a>
         </div>
@@ -643,7 +643,7 @@ and related topics. Your use of this website is at your own risk.</p>
             <img src="https://cdn-icons-png.flaticon.com/512/4332/4332636.png" alt="Age Assessment" style="width: 60px; margin-bottom: 10px;">
             <h3 style="color: #2c3e50;">AI Age Assessment</h3>
             <p style="color: #555;">🧑‍⚕️ AI-based age prediction model for healthcare & security applications.</p>
-            <a href="age-assessment.html" target="_blank" style="background: #ff5722; color: white; padding: 8px 16px; border-radius: 20px; font-size: 14px; text-decoration: none; font-weight: bold; display: inline-block;">
+            <a href="Application.html" target="_blank" style="background: #ff5722; color: white; padding: 8px 16px; border-radius: 20px; font-size: 14px; text-decoration: none; font-weight: bold; display: inline-block;">
                 Learn More →
             </a>
         </div>
@@ -653,7 +653,7 @@ and related topics. Your use of this website is at your own risk.</p>
             <img src="https://cdn-icons-png.flaticon.com/512/3065/3065263.png" alt="Content Delivery" style="width: 60px; margin-bottom: 10px;">
             <h3 style="color: #2c3e50;">AI Content Delivery</h3>
             <p style="color: #555;">📡 Smart AI-powered content recommendation system for museums.</p>
-            <a href="content-delivery.html" target="_blank" style="background: #ff5722; color: white; padding: 8px 16px; border-radius: 20px; font-size: 14px; text-decoration: none; font-weight: bold; display: inline-block;">
+            <a href="Application.html" target="_blank" style="background: #ff5722; color: white; padding: 8px 16px; border-radius: 20px; font-size: 14px; text-decoration: none; font-weight: bold; display: inline-block;">
                 Learn More →
             </a>
         </div>
@@ -664,7 +664,7 @@ and related topics. Your use of this website is at your own risk.</p>
                  style="width: 70px; height: auto; margin-bottom: 12px; border-radius: 5px;">
             <h3 style="color: #2c3e50; font-size: 20px; font-weight: bold;">AI Breast Cancer Detection</h3>
             <p style="color: #555; font-size: 14px; line-height: 1.5;">🎗️ AI-driven model for early breast cancer detection and diagnosis using deep learning techniques.</p>
-            <a href="breast-cancer-detection.html" target="_blank" 
+            <a href="Application.html" target="_blank" 
                style="background: #ff5722; color: white; padding: 10px 18px; border-radius: 20px; font-size: 14px; text-decoration: none; font-weight: bold; display: inline-block; margin-top: 10px;">
                 Learn More →
             </a>
