--- a/index.html
+++ b/index.html
@@ -511,9 +511,9 @@
         🚀 Exploring Cutting-Edge Innovations & AI Technology 🤖
     </p>
     <div style="display: flex; justify-content: center; margin-top: 20px;">
-       <a href="we-are-working.html" target="_blank" style="background: #007BFF; color: white; padding: 10px 20px; border-radius: 25px; font-size: 16px; text-decoration: none; font-weight: bold;">
-    View Projects →
-</a>
+   <a href="We -are- working.html" target="_blank" style="background: #007BFF; color: white; padding: 10px 20px; border-radius: 25px; font-size: 16px; text-decoration: none; font-weight: bold;">
+            View Projects →
+        </a>
     </div>
 </section>
 
