--- a/index.html
+++ b/index.html
@@ -153,8 +153,18 @@
                     <a href="https://www.makautexam.net/" target="_blank" class="university-link">
                         Maulana Abul Kalam Azad University of Technology, India
                     </a>
-                    <p>I am Arafat Ali Mondal. I completed my Master’s in Artificial Intelligence in 2024 and have one year of experience in AI and sensor technology as a Research and Development Contributor at the CRTL Lab, NCSM, since March 2024. My work focuses on system design and AI/ML-driven applications, leveraging innovative technologies to develop efficient and intelligent solutions. My area of research is AI technology in agriculture and healthcare on other sensor tech. My master's thesis was to create an AI web and Android application for agriculture that promotes automation through ML and DL. I am also engaged in AI-based display and sensor technology, which is all about working on real-world applications integrating AI into interactive and automated devices. In healthcare, I work with experts in creating ML-based healthcare solutions that combine ML and sensor technology to create innovation. Without AI research, I have web development skills in frontend and backend development. I create user-centric, AI-enabled web applications with maximum emphasis on system optimization, scalability, and smooth user experiences. I have four research papers, comprising a peer-reviewed journal article and an IEEE conference paper. My dream is to combine AI, sensor technology, and web development and Application development in order to develop groundbreaking solutions in the healthcare and automation sectors and propel the development of AI-driven smart systems. I love machine learning, healthcare innovations, and soft robotics. Presently, I am looking for internship and PhD positions in these areas to further develop my skills and contribute to state-of-the-art research and development. 
-            </p>
+            <p>
+    I am Arafat Ali Mondal, a passionate AI researcher with a Master’s in Artificial Intelligence (2024). I have one year of experience in AI and sensor technology as a Research and Development Contributor at the CRTL Lab, NCSM, where I focus on system design and AI/ML-driven applications to develop intelligent and efficient solutions.  
+
+    My research interests lie in AI applications in agriculture, healthcare, and sensor technology. For my Master’s thesis, I developed an AI-powered web and Android application for agricultural automation using Machine Learning (ML) and Deep Learning (DL). Additionally, I work on AI-based display and sensor technologies, integrating AI into interactive and automated systems for real-world applications. In healthcare, I collaborate with experts to develop ML-based solutions that merge AI and sensor technologies to drive innovation.  
+
+    Beyond AI research, I have strong skills in web development, specializing in both frontend and backend technologies. I create AI-enabled, user-centric web applications with a focus on system optimization, scalability, and seamless user experiences.  
+
+    I have published four research papers, including a peer-reviewed journal article and an IEEE conference paper. My vision is to merge AI, sensor technology, and web/app development to create groundbreaking solutions in healthcare and automation, pushing the boundaries of AI-driven smart systems.  
+
+    I am passionate about machine learning, healthcare innovations, and soft robotics. Currently, I am seeking internship and PhD opportunities in these fields to expand my expertise and contribute to cutting-edge research and development.
+</p>
+
         </section>
 
         <!-- Research Interests -->
