--- a/index.html
+++ b/index.html
@@ -14,21 +14,25 @@
             background: #f4f4f4;
             color: #333;
             transition: background 0.5s ease, color 0.5s ease;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
-        /* Horizontal Scrollable Navigation */
+        /* Scrollable Navigation */
         .scroll-nav-container {
             display: flex;
             align-items: center;
             background: #011325;
             padding: 10px 0;
+            width: 100%;
+            overflow: hidden;
             position: relative;
         }
 
         .scroll-nav {
             display: flex;
             overflow-x: auto;
-            scroll-behavior: smooth;
             white-space: nowrap;
             width: 90%;
             padding: 10px;
@@ -79,6 +83,94 @@
         .scroll-btn:hover {
             background: #0056b3;
         }
+
+        /* Hero Section */
+        .hero {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+            padding: 20px;
+            background: white;
+            width: 90%;
+            margin: 20px 0;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        .hero-image img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 50%;
+            margin-bottom: 20px;
+        }
+
+        /* Articles Section */
+        #article-container {
+            width: 90%;
+            margin: 20px 0;
+        }
+
+        .article {
+            background: white;
+            padding: 15px;
+            margin: 10px 0;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        /* Search Container */
+        .search-container {
+            margin-bottom: 20px;
+            width: 90%;
+        }
+
+        input[type="text"] {
+            padding: 10px;
+            width: 100%;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+
+        /* Loading Spinner */
+        .loading {
+            text-align: center;
+            margin: 20px;
+        }
+
+        /* Responsive Styles */
+        @media (min-width: 600px) {
+            .hero {
+                flex-direction: row;
+                justify-content: space-between;
+            }
+
+            .hero-image {
+                flex-basis: 40%;
+                padding-right: 20px;
+            }
+
+            .hero-content {
+                flex-basis: 55%;
+                text-align: left;
+            }
+
+            .scroll-nav a {
+                padding: 15px 30px;
+            }
+
+            .article {
+                display: flex;
+                flex-direction: column;
+            }
+        }
+
+        @media (max-width: 600px) {
+            .scroll-nav a {
+                padding: 10px 15px;
+                font-size: 14px;
+            }
+        }
     </style>
 </head>
 <body>
@@ -87,85 +179,118 @@
     <div class="scroll-nav-container">
         <button class="scroll-btn left" onclick="scrollLeftNav()">❮</button>
         <div class="scroll-nav" id="scrollNav">
-                <a href="#home">Home</a>
-                <a href="#research-interests">Research Interests</a>
-                <a href="#education">Education </a>
-                <a href="#work-experience">Work Experience</a>
-                <a href="#publications">Publications</a>
-                <a href="#ourteam">Our Team</a>
-                <a href="#On Going Projects">My Research Works</a>
-                <a href="#We are Working">We are Working</a>
-
-                <!-- <li><a href="#My research works">On Going Projects</a></li> -->
-                <a href="#ml">What is ML </a>
-                <a href="#ml">ML Quiz Game</a>
-                <a href="#DL">What is DL</a>
-                <a href="#our-application">Our Application</a>
-
-                <!-- <li><a href="#OurTeam">Our Team</a></li> -->
+            <a href="#home">Home</a>
+            <a href="#research-interests">Research Interests</a>
+            <a href="#education">Education</a>
+            <a href="#work-experience">Work Experience</a>
+            <a href="#publications">Publications</a>
+            <a href="#ourteam">Our Team</a>
+            <a href="#on-going-projects">My Research Works</a>
+            <a href="#we-are-working">We are Working</a>
+            <a href="#ml">What is ML</a>
+            <a href="#ml-quiz-game">ML Quiz Game</a>
+            <a href="#dl">What is DL</a>
+            <a href="#our-application">Our Application</a>
             <a href="#contact">Contact</a>
         </div>
         <button class="scroll-btn right" onclick="scrollRightNav()">❯</button>
     </div>
 
+    <!-- Hero Section -->
+    <section class="hero" id="home">
+        <div class="hero-image">
+            <img src="my-image.jpg" alt="Arafat Ali Mondal">
+        </div>
+        <div class="hero-content">
+            <h1>Arafat Ali Mondal</h1>
+            <h3>Master's in Artificial Intelligence</h3>
+            <a href="https://www.makautexam.net/" target="_blank" class="university-link">
+                Maulana Abul Kalam Azad University of Technology, India
+            </a>
+            <p>
+                I am Arafat Ali Mondal. I completed my Master’s in Artificial Intelligence in 2024 and have one year of experience in AI and sensor technology as a Research and Development Contributor at the CRTL Lab, NCSM, since March 2024. My work focuses on system design and AI/ML-driven applications, leveraging innovative technologies to develop efficient and intelligent solutions. My area of research is AI technology in agriculture and healthcare on other sensor tech. My master's thesis was to create an AI web and Android application for agriculture that promotes automation through ML and DL. I am also engaged in AI-based display and sensor technology, which is all about working on real-world applications integrating AI into interactive and automated devices. In healthcare, I work with experts in creating ML-based healthcare solutions that combine ML and sensor technology to create innovation. Without AI research, I have web development skills in frontend and backend development. I create user-centric, AI-enabled web applications with maximum emphasis on system optimization, scalability, and smooth user experiences. I have four research papers, comprising a peer-reviewed journal article and an IEEE conference paper. My dream is to combine AI, sensor technology, and web development and Application development in order to develop groundbreaking solutions in the healthcare and automation sectors and propel the development of AI-driven smart systems. I love machine learning, healthcare innovations, and soft robotics. Presently, I am looking for internship and PhD positions in these areas to further develop my skills and contribute to state-of-the-art research and development.
+            </p>
+        </div>
+    </section>
+
+    <div class="search-container">
+        <input type="text" id="search-input" placeholder="Search articles..." oninput="filterArticles()">
+    </div>
+
+    <div id="article-container"></div>
+    <div id="loading" class="loading" style="display: none;">Loading articles...</div>
+
     <script>
+        async function loadArticles() {
+            try {
+                document.getElementById("loading").style.display = "block"; // Show loading message
+                const response = await fetch("articles.json"); // Load articles from JSON
+                const articles = await response.json();
+                const container = document.getElementById("article-container");
+
+                // Clear previous content
+                container.innerHTML = "";
+
+                // Loop through articles and add to page
+                articles.forEach(article => {
+                    let articleElement = document.createElement("div");
+                    articleElement.classList.add("article");
+
+                    articleElement.innerHTML = `
+                        <h2>${article.title}</h2>
+                        <p><strong>Category:</strong> ${article.category}</p>
+                        <p>${article.content}</p>
+                        <h3>Table of Contents:</h3>
+                        <ul>
+                            ${article.subtopics.map(sub => `<li>${sub}</li>`).join("")}
+                        </ul>
+                        <hr>
+                    `;
+
+                    container.appendChild(articleElement);
+                });
+            } catch (error) {
+                console.error("Error loading articles:", error);
+            } finally {
+                document.getElementById("loading").style.display = "none"; // Hide loading message
+            }
+        }
+
+        // Scroll functions for navigation
         function scrollLeftNav() {
-            document.getElementById("scrollNav").scrollBy({
-                left: -150,
-                behavior: "smooth"
+            const nav = document.getElementById("scrollNav");
+            nav.scrollBy({
+                left: -100,
+                behavior: 'smooth'
             });
         }
 
         function scrollRightNav() {
-            document.getElementById("scrollNav").scrollBy({
-                left: 150,
-                behavior: "smooth"
+            const nav = document.getElementById("scrollNav");
+            nav.scrollBy({
+                left: 100,
+                behavior: 'smooth'
             });
         }
+
+        function filterArticles() {
+            const input = document.getElementById("search-input").value.toLowerCase();
+            const articles = document.querySelectorAll(".article");
+            articles.forEach(article => {
+                const title = article.querySelector("h2").textContent.toLowerCase();
+                if (title.includes(input)) {
+                    article.style.display = "";
+                } else {
+                    article.style.display = "none";
+                }
+            });
+        }
+
+        window.onload = loadArticles; // Load articles when page loads
     </script>
+</body>
 
-    </div>
-        <!-- Hero Section -->
-        <!-- <section class="hero" id="home">
-            <img src="my image .jpg" alt="Arafat Ali Mondal">
-            <div class="hero-content">
-                <h2>Arafat Ali Mondal</h2>
-                <h2>Master's in AI</h2>
-                <a href="https://www.makautexam.net/" target="_blank">
-                    Maulana Abul Kalam Azad University of Technology, West Bengal, India
-                </a>            
-                <p>
-                    I am Arafat Ali Mondal. I completed my Master’s in Artificial Intelligence in 2024 and have one year of experience in AI and sensor technology as a Research and Development Contributor at the CRTL Lab, NCSM, since March 2024. My work focuses on system design and AI/ML-driven applications. I am currently looking for PhD and internship opportunities in AI, sensor technology, and healthcare automation.
-                </p>
-            </div>
-        </section> -->
-        <section class="hero" id="home">
-            <div class="hero-container">
-                <!-- Left: Profile Image -->
-                <div class="hero-image">
-                    <img src="my image .jpg"  alt="Arafat Ali Mondal">
-                </div>
-        
-                <!-- Right: Content -->
-                <div class="hero-content">
-                    <h1>Arafat Ali Mondal</h1>
-                    <h3>Master's in Artificial Intelligence</h3>
-                    <a href="https://www.makautexam.net/" target="_blank" class="university-link">
-                        Maulana Abul Kalam Azad University of Technology, India
-                    </a>
-              <p>
-    I am Arafat Ali Mondal, a passionate AI researcher with a Master’s in Artificial Intelligence (2024). I have one year of experience in AI and sensor technology as a Research and Development Contributor at the CRTL Lab, NCSM, where I focus on system design and AI/ML-driven applications to develop intelligent and efficient solutions.  
 
-    My research interests lie in AI applications in agriculture, healthcare, and sensor technology. For my Master’s thesis, I developed an AI-powered web and Android application for agricultural automation using Machine Learning (ML) and Deep Learning (DL). Additionally, I work on AI-based display and sensor technologies, integrating AI into interactive and automated systems for real-world applications. In healthcare, I collaborate with experts to develop ML-based solutions that merge AI and sensor technologies to drive innovation.  
-
-    Beyond AI research, I have strong skills in web development, specializing in both frontend and backend technologies. I create AI-enabled, user-centric web applications with a focus on system optimization, scalability, and seamless user experiences.  
-
-    I have published four research papers, including a peer-reviewed journal article and an IEEE conference paper. My vision is to merge AI, sensor technology, and web/app development to create groundbreaking solutions in healthcare and automation, pushing the boundaries of AI-driven smart systems.  
-
-    I am passionate about machine learning, healthcare innovations, and soft robotics. Currently, I am seeking internship and PhD opportunities in these fields to expand my expertise and contribute to cutting-edge research and development.
-</p>
-
-        </section>
 
         <!-- Research Interests -->
         <section id="research-interests" class="content-box">
