--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,25 +15,21 @@
             background: #f4f4f4;
             color: #333;
             transition: background 0.5s ease, color 0.5s ease;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
         }
 
-        /* Scrollable Navigation */
+        /* Horizontal Scrollable Navigation */
         .scroll-nav-container {
             display: flex;
             align-items: center;
             background: #011325;
             padding: 10px 0;
-            width: 100%;
-            overflow: hidden;
             position: relative;
         }
 
         .scroll-nav {
             display: flex;
             overflow-x: auto;
+            scroll-behavior: smooth;
             white-space: nowrap;
             width: 90%;
             padding: 10px;
@@ -83,94 +80,6 @@
         .scroll-btn:hover {
             background: #0056b3;
         }
-
-        /* Hero Section */
-        .hero {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            text-align: center;
-            padding: 20px;
-            background: white;
-            width: 90%;
-            margin: 20px 0;
-            border-radius: 5px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-
-        .hero-image img {
-            max-width: 100%;
-            height: auto;
-            border-radius: 50%;
-            margin-bottom: 20px;
-        }
-
-        /* Articles Section */
-        #article-container {
-            width: 90%;
-            margin: 20px 0;
-        }
-
-        .article {
-            background: white;
-            padding: 15px;
-            margin: 10px 0;
-            border-radius: 5px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-
-        /* Search Container */
-        .search-container {
-            margin-bottom: 20px;
-            width: 90%;
-        }
-
-        input[type="text"] {
-            padding: 10px;
-            width: 100%;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-
-        /* Loading Spinner */
-        .loading {
-            text-align: center;
-            margin: 20px;
-        }
-
-        /* Responsive Styles */
-        @media (min-width: 600px) {
-            .hero {
-                flex-direction: row;
-                justify-content: space-between;
-            }
-
-            .hero-image {
-                flex-basis: 40%;
-                padding-right: 20px;
-            }
-
-            .hero-content {
-                flex-basis: 55%;
-                text-align: left;
-            }
-
-            .scroll-nav a {
-                padding: 15px 30px;
-            }
-
-            .article {
-                display: flex;
-                flex-direction: column;
-            }
-        }
-
-        @media (max-width: 600px) {
-            .scroll-nav a {
-                padding: 10px 15px;
-                font-size: 14px;
-            }
-        }
     </style>
 </head>
 <body>
@@ -179,39 +88,63 @@
     <div class="scroll-nav-container">
         <button class="scroll-btn left" onclick="scrollLeftNav()">❮</button>
         <div class="scroll-nav" id="scrollNav">
-            <a href="#home">Home</a>
-            <a href="#research-interests">Research Interests</a>
-            <a href="#education">Education</a>
-            <a href="#work-experience">Work Experience</a>
-            <a href="#publications">Publications</a>
-            <a href="#ourteam">Our Team</a>
-            <a href="#on-going-projects">My Research Works</a>
-            <a href="#we-are-working">We are Working</a>
-            <a href="#ml">What is ML</a>
-            <a href="#ml-quiz-game">ML Quiz Game</a>
-            <a href="#dl">What is DL</a>
-            <a href="#our-application">Our Application</a>
+                <a href="#home">Home</a>
+                <a href="#research-interests">Research Interests</a>
+                <a href="#education">Education </a>
+                <a href="#work-experience">Work Experience</a>
+                <a href="#publications">Publications</a>
+                <a href="#ourteam">Our Team</a>
+                <a href="#On Going Projects">My Research Works</a>
+                <a href="#We are Working">We are Working</a>
+
+                <!-- <li><a href="#My research works">On Going Projects</a></li> -->
+                <a href="#ml">What is ML </a>
+                <a href="#ml">ML Quiz Game</a>
+                <a href="#DL">What is DL</a>
+                <a href="#our-application">Our Application</a>
+
+                <!-- <li><a href="#OurTeam">Our Team</a></li> -->
             <a href="#contact">Contact</a>
         </div>
         <button class="scroll-btn right" onclick="scrollRightNav()">❯</button>
     </div>
 
-    <!-- Hero Section -->
-    <section class="hero" id="home">
-        <div class="hero-image">
-            <img src="my-image.jpg" alt="Arafat Ali Mondal">
-        </div>
-        <div class="hero-content">
-            <h1>Arafat Ali Mondal</h1>
-            <h3>Master's in Artificial Intelligence</h3>
-            <a href="https://www.makautexam.net/" target="_blank" class="university-link">
-                Maulana Abul Kalam Azad University of Technology, India
-            </a>
-            <p>
-                I am Arafat Ali Mondal. I completed my Master’s in Artificial Intelligence in 2024 and have one year of experience in AI and sensor technology as a Research and Development Contributor at the CRTL Lab, NCSM, since March 2024. My work focuses on system design and AI/ML-driven applications, leveraging innovative technologies to develop efficient and intelligent solutions. My area of research is AI technology in agriculture and healthcare on other sensor tech. My master's thesis was to create an AI web and Android application for agriculture that promotes automation through ML and DL. I am also engaged in AI-based display and sensor technology, which is all about working on real-world applications integrating AI into interactive and automated devices. In healthcare, I work with experts in creating ML-based healthcare solutions that combine ML and sensor technology to create innovation. Without AI research, I have web development skills in frontend and backend development. I create user-centric, AI-enabled web applications with maximum emphasis on system optimization, scalability, and smooth user experiences. I have four research papers, comprising a peer-reviewed journal article and an IEEE conference paper. My dream is to combine AI, sensor technology, and web development and Application development in order to develop groundbreaking solutions in the healthcare and automation sectors and propel the development of AI-driven smart systems. I love machine learning, healthcare innovations, and soft robotics. Presently, I am looking for internship and PhD positions in these areas to further develop my skills and contribute to state-of-the-art research and development.
-            </p>
-        </div>
-    </section>
+    <script>
+        function scrollLeftNav() {
+            document.getElementById("scrollNav").scrollBy({
+                left: -150,
+                behavior: "smooth"
+            });
+        }
+
+        function scrollRightNav() {
+            document.getElementById("scrollNav").scrollBy({
+                left: 150,
+                behavior: "smooth"
+            });
+        }
+    </script>
+
+    </div>
+
+        </section> 
+        <section class="hero" id="home">
+            <div class="hero-container">
+                <!-- Left: Profile Image -->
+                <div class="hero-image">
+                    <img src="my image .jpg"  alt="Arafat Ali Mondal">
+                </div>
+        
+                <!-- Right: Content -->
+                <div class="hero-content">
+                    <h1>Arafat Ali Mondal</h1>
+                    <h3>Master's in Artificial Intelligence</h3>
+                    <a href="https://www.makautexam.net/" target="_blank" class="university-link">
+                        Maulana Abul Kalam Azad University of Technology, India
+                    </a>
+                    <p>I am Arafat Ali Mondal. I completed my Master’s in Artificial Intelligence in 2024 and have one year of experience in AI and sensor technology as a Research and Development Contributor at the CRTL Lab, NCSM, since March 2024. My work focuses on system design and AI/ML-driven applications, leveraging innovative technologies to develop efficient and intelligent solutions. My area of research is AI technology in agriculture and healthcare on other sensor tech. My master's thesis was to create an AI web and Android application for agriculture that promotes automation through ML and DL. I am also engaged in AI-based display and sensor technology, which is all about working on real-world applications integrating AI into interactive and automated devices. In healthcare, I work with experts in creating ML-based healthcare solutions that combine ML and sensor technology to create innovation. Without AI research, I have web development skills in frontend and backend development. I create user-centric, AI-enabled web applications with maximum emphasis on system optimization, scalability, and smooth user experiences. I have four research papers, comprising a peer-reviewed journal article and an IEEE conference paper. My dream is to combine AI, sensor technology, and web development and Application development in order to develop groundbreaking solutions in the healthcare and automation sectors and propel the development of AI-driven smart systems. I love machine learning, healthcare innovations, and soft robotics. Presently, I am looking for internship and PhD positions in these areas to further develop my skills and contribute to state-of-the-art research and development. 
+                    </p>
+        </section>
 
     <div class="search-container">
         <input type="text" id="search-input" placeholder="Search articles..." oninput="filterArticles()">
