--- a/index.html
+++ b/index.html
@@ -152,9 +152,9 @@
                 <i class="fas fa-microscope" style="color: #28a745;"></i> Research Interests
             </h2>
             <ul>
-                <li>Medical Image Computing</li>
-                <li>Data Science in Medicine</li>
-                <li>Artificial Intelligence in Medicine</li>
+               <li>Medical Image Computing</li>
+                <li>medical imaging</li>
+                <li>ML in Medicine</li>
                 <li>Human-Robot Interaction</li>
                 <li>Soft Robotics</li>
             </ul>
