--- a/index.html
+++ b/index.html
@@ -138,11 +138,11 @@
                 <!-- Right: Content -->
                 <div class="hero-content">
                     <h1>Arafat Ali Mondal</h1>
-                    <h3>Master's in Artificial Intelligence</h3>
+                    <h3>Master's in AI</h3>
                     <a href="https://www.makautexam.net/" target="_blank" class="university-link">
                         Maulana Abul Kalam Azad University of Technology, India
                     </a>
-                    <p>I am Arafat Ali Mondal. I completed my Master’s in Artificial Intelligence in 2024 and have one year of experience in AI and sensor technology as a Research and Development Contributor at the CRTL Lab, NCSM, since March 2024. My work focuses on system design and AI/ML-driven applications, leveraging innovative technologies to develop efficient and intelligent solutions. My area of research is AI technology in agriculture and healthcare on other sensor tech. My master's thesis was to create an AI web and Android application for agriculture that promotes automation through ML and DL. I am also engaged in AI-based display and sensor technology, which is all about working on real-world applications integrating AI into interactive and automated devices. In healthcare, I work with experts in creating ML-based healthcare solutions that combine ML and sensor technology to create innovation. Without AI research, I have web development skills in frontend and backend development. I create user-centric, AI-enabled web applications with maximum emphasis on system optimization, scalability, and smooth user experiences. I have four research papers, comprising a peer-reviewed journal article and an IEEE conference paper. My dream is to combine AI, sensor technology, and web development and Application development in order to develop groundbreaking solutions in the healthcare and automation sectors and propel the development of AI-driven smart systems. I love machine learning, healthcare innovations, and soft robotics. Presently, I am looking for internship and PhD positions in these areas to further develop my skills and contribute to state-of-the-art research and development. 
+                    <p>I I am an AI & ML professional with 1 year of hands-on experience in developing ML pipelines for counter-recommended and delivery systems using image analysis, machine learning, and sensor technology. In addition, I have 1.5 years of research experience under my thesis supervisor, where I developed ML- and DL-based apple sorting applications using probabilistic ML models for accurate detection and automated harvesting decisions. My master’s thesis involved building real-world applications on the Web and Android platforms using data analysis and ML frameworks.Beyond agriculture, I have a strong interest in NeuroAI and medical image analysis, where I aim to apply ML and DL to address challenges in neuroscience and healthcare Robotics, and vision, driving me to explore intelligent system design across multiple domains. I bring a strong foundation in real-world problem solving, a research-driven mindset, and a commitment to innovation in AI-powered applications.I have published my work in conferences, peer-reviewed journals, and review articles, and I aspire to leverage my expertise in AI, medical imaging, and NeuroAI for brain-inspired robotics to contribute to cutting-edge research and the development of impactful intelligent systems. 
                     </p>
         </section>
         <!-- Research Interests -->
@@ -807,4 +807,5 @@ document.getElementById("email-container").innerHTML = '<a href="mailto:arafatpe
     </script>
 </body>
 </html>
+
 
